--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -5,6 +5,7 @@
     <th>Name</th>
     <th>Date</th>
     <th>Users</th>
+    <th>Attend/Unattend</th>
 
   </thead>
   <% @events.each do |event| %>
@@ -17,6 +18,16 @@
     </td>
     <td>
       <%= link_to 'View Attendees', event_users_path(event.id) ,:class => "btn" %>
+    </td>
+    <td>
+      <% if current_user %>
+        <% if event.user_events.where(:user_id => current_user&.id).present? %>
+          <%= link_to 'UnAttend', event_unattend_path(event.id), method: :delete, remote: true,
+          :class => "btn" %>
+        <% else %>
+          <%= link_to 'Attend', event_attend_path(event.id), method: :post, data: { confirm: "Are you sure?" }, remote: true, :class => "btn" %>
+        <% end %>
+      <% end %>
     </td>
   </tr>
   <% end %>
