--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -15,6 +15,12 @@
  *= require_self
  */
 
-.form-control{
+.form-control {
   width: 30%;
+}
+
+.pagination > a {
+  padding: 4px 6px;
+  color: #555;
+  font-size: 13px;
 }
