--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -22,7 +22,7 @@
       <%= link_to 'View Attendees', event_users_path(event.id) ,:class => "btn" %>
     </td>
     <td>
-      <% if current_user %>
+      <% if current_user && !event.is_past_event? %>
         <% if event.user_events.where(:user_id => current_user.id).present? %>
           <%= link_to 'UnAttend', event_unattend_path(event.id), method: :delete, data: { confirm: "Are you sure?" }, remote: true, :class => "btn" %>
         <% else %>
