--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,7 +11,7 @@
 
   <body>
     <%= render :partial => 'shared/navbar' %>
-    <div class="container">
+    <div class="container" style="background-color:#b3c7d8bf;">
       <% if flash[:notice] %>
         <div class="alert alert-info"><%= notice %></div>
       <% end %>
