--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,6 +1,6 @@
 <h3>Users List</h3>
 
-<%= will_paginate @events %>
+<%= will_paginate @users %>
 
 <table class="table table-hover table-bordered">
   <thead>
@@ -19,4 +19,4 @@
   <% end %>
 </table>
 
-<%= will_paginate @events %>
+<%= will_paginate @users %>
